<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FitMe</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to the Alert Dialog -->
    <string name="notification_listener_service">"Notification Listener Service"</string>
    <string name="notification_listener_service_explanation">"For the the app. to work you need to enable the Notification Listener Service. Enable it now?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="monthly_txt"><Data><b>Your Monthly BMI is :</b></Data></string>

    <string name="active_notification_count_zero">No active notification</string>
    <string name="enter_name">Enter name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_height_in_mtr">Enter height (in Mtr)</string>
    <string name="enter_weight_in_k_g">Enter Weight (in K.G)</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="non_vegetarian">Non-vegetarian</string>
    <string name="submit">Submit</string>
    <string name="explore_more">Explore More</string>
    <string name="clear_all">Clear All</string>
    <string name="web_client_id" tools:ignore="TypographyDashes">150831264007-8unmit726mq76u0a5g729oinqcm6309o.apps.googleusercontent.com</string>
    <string name="welcome">Welcome!</string>
    <string name="no_data_found_ngo_to_profile_section_to_add_information">No data found.\nGo to profile section to add information.</string>
    <string name="your_details">Your details:</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="diet_plan">Diet Plan:</string>
    <string name="see_graph">See Graph:</string>
    <plurals name="active_notification_count_nonzero">
        <item quantity="one">%d active notification</item>
        <item quantity="other">%d active notifications</item>
    </plurals>
</resources>