<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:title="@string/app_name"
            android:titleTextColor="@color/white" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:autofillHints="name"
            android:hint="@string/enter_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:orientation="horizontal"
            android:padding="10sp">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />

        </RadioGroup>

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/enter_height_in_mtr"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioVN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:orientation="horizontal"
            android:padding="10sp">

            <RadioButton
                android:id="@+id/veg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="1"
                android:text="@string/vegetarian" />

            <RadioButton
                android:id="@+id/nonVeg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="2"
                android:text="@string/non_vegetarian" />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="25sp"
            android:backgroundTint="@color/black"
            android:onClick="checkBmi"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="25sp"
            android:backgroundTint="@color/black"
            android:onClick="openNew"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/explore_more"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:padding="10sp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/diet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>