<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GraphActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:title="@string/app_name"
            android:titleTextColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="Enter monthly weight for 12 months"
            android:textColor="@color/black"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="January:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="February:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="March:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="April:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="May:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="June:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="July:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/seven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="August:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="September:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/nine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="October:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="November:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/eleven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="December:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/twelve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_weight_in_k_g"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp"
            android:text="Enter height:"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/enter_height_in_mtr"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="25sp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="@color/black"
            android:onClick="calcBMIAll"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="25sp"
            android:layout_marginBottom="30sp"
            android:backgroundTint="@color/black"
            android:onClick="clearWeight"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/clear_all"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>